feat: Add production deployment support (Netlify + Render)
🎉 Major Updates:

**Dual-Mode Server (server-mcp.js):**
- Auto-detects local vs production environment
- Local: HTTPS with self-signed certificates
- Production: HTTP (Render provides HTTPS)
- Zero code changes needed when deploying

**Smart Frontend (frontend/app.js):**
- Dynamic API URL detection
- Works with localhost and production URLs
- Environment variable support for Netlify

**Deployment Configuration:**
- render.yaml: Complete Render deployment config
- netlify.toml: Netlify settings with API URL configuration
- Health check endpoint for Render monitoring

**Smart Conversation Features:**
- Chatbot asks for missing details instead of guessing
- Validates required fields before creating invoices/quotes/contacts
- Provides helpful examples and guidance

**Enhanced Analytics:**
- Two-step AI process: Fetch data → Analyze with GLM
- Smart sales calculations and insights
- Human-readable responses instead of raw data

**Files Added:**
- server-mcp.js: Production-ready backend server
- mcpClient.js: Xero MCP Server integration
- xeroAuth.js: OAuth 2.0 Client Credentials authentication
- render.yaml: Render deployment configuration
- MCP-*.md: Architecture and implementation docs

**Files Modified:**
- glmClient.js: Enhanced with smart conversation prompts
- frontend/app.js: Dynamic API URL support
- frontend/index.html: Environment variable injection
- netlify.toml: Production deployment settings
- package.json: Updated dependencies

✅ Ready for deployment to Netlify (frontend) + Render (backend)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,6 +102,13 @@
     </div>
   </div>
 
+  <!-- Inject API URL for Netlify deployment -->
+  <script>
+    // For local development, this stays as localhost
+    // For Netlify deployment, set NETLIFY_API_URL environment variable
+    // and Netlify will inject it during the build
+  </script>
+
   <script src="app.js?v=28"></script>
 </body>
 </html>
